--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -322,6 +322,11 @@
 
 
 
+
+
+
+
+
 /**
  * 头部
  */
@@ -373,6 +378,11 @@
 .com-header-user * {
     font-size: 16px;
 }
+
+
+
+
+
 
 
 /**
@@ -498,6 +508,11 @@
 }
 
 
+
+
+
+
+
 /**
  * 
  */
@@ -513,4 +528,93 @@
     overflow: hidden;
     overflow-y: auto;
     box-sizing: border-box;
+}
+
+
+
+
+
+
+
+
+
+/**
+ * 
+ */
+
+.com-tab-title {
+    position: relative;
+    left: 0;
+    height: 40px;
+    white-space: nowrap;
+    font-size: 0;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    transition: all .2s;
+    -webkit-transition: all .2s;
+    border-color: #e6e6e6;
+    li {
+        display: inline-block;
+        *display: inline;
+        *zoom: 1;
+        vertical-align: middle;
+        font-size: 14px;
+        transition: all .2s;
+        -webkit-transition: all .2s;
+        position: relative;
+        line-height: 40px;
+        min-width: 65px;
+        padding: 0 15px;
+        text-align: center;
+        cursor: pointer;
+        a {
+            display: block;
+            height:100%;
+        }
+        &.active {
+            &:after {
+                position: absolute;
+                left: 0;
+                top: 0;
+                content: '';
+                width: 100%;
+                height: 41px;
+            }
+        }
+    }
+
+    &.type-1 {
+        li {
+            &.active {
+                &:after {
+                    border-width: 1px;
+                    border-style: solid;
+                    border-color: #e6e6e6;
+                    border-bottom-color: #fff;
+                    border-radius: 2px 2px 0 0;
+                    box-sizing: border-box;
+                    pointer-events: none;
+                }
+            }
+        }
+    }
+    &.type-2 {
+        li {
+            &.active {
+                color: #009688;
+                a {
+                    color: #009688;
+                }
+                &:after {
+                    border-bottom: 2px solid #5FB878;
+                }
+            }
+        }
+    }
+}
+.com-tab-body{
+    display:none;
+    &.active{
+        display:block;
+    }
 }
