--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -159,8 +159,23 @@
     margin-left: 30px;
 }
 
+.ml40 {
+    margin-left: 40px;
+}
 .ml50 {
     margin-left: 50px;
+}
+.ml60 {
+    margin-left:60px;
+}
+.ml70 {
+    margin-left:70px;
+}
+.ml80 {
+    margin-left:80px;
+}
+.ml90 {
+    margin-left:90px;
 }
 
 .ml100 {
@@ -317,6 +332,60 @@
 
 .pr100 {
     padding-right: 100px;
+}
+
+
+.w40{
+    width:40px; 
+}
+.w50{
+    width:50px;
+}
+.w60{
+    width:60px;
+}
+.w70{
+    width:70px;
+}
+.w80{
+    width:80px;
+}
+.w90{
+    width:90px;
+}
+.w100{
+    width:100px;
+}
+
+.w110{
+    width:110px;
+}
+.w120{
+    width:120px;
+}
+.w130{
+    width:130px;
+}
+.w140{
+    width:140px;
+}
+.w150{
+    width:150px;
+}
+.w160{
+    width:160px;
+}
+.w170{
+    width:170px;
+}
+.w180{
+    width:180px;
+}
+.w190{
+    width:190px;
+}
+.w200{
+    width:200px;
 }
 
 
