--- a/src/views/common/_sideMenu.html
+++ b/src/views/common/_sideMenu.html
@@ -1,9 +1,10 @@
 <!-- side  start****************************************************** -->
 <div class="com-side">
     <div class="com-side-menu-wrap">
+        <div class="com-side-unfold"><i class="iconfont f18">&#xe6d4;</i></div>
         <ul class="com-side-menu">
             <li class="treeview active">
-                <a href="javascript:void(0)">
+                <a href="javascript:void(0)" data-tip="榜单管理">
                             <i class="layui-icon">&#xe60c;</i>
                             <span class="txt">榜单管理</span>
                             <span class="more"></span> 
@@ -16,7 +17,7 @@
                 </ul>
             </li>
             <li class="treeview">
-                <a href="javascript:void(0)">
+                <a href="javascript:void(0)"  data-tip="菜单栏02">
                             <i class="layui-icon">&#xe60c;</i>
                             <span class="txt">菜单栏02</span>
                             <span class="more"></span> 
@@ -51,7 +52,7 @@
                 </ul>
             </li>
             <li class="treeview">
-                <a href="javascript:void(0)">
+                <a href="javascript:void(0)"  data-tip="菜单栏03">
                             <i class="layui-icon">&#xe60c;</i>
                             <span class="txt">菜单栏03</span>
                             <span class="more"></span> 
