--- a/src/css/scss/_common.scss
+++ b/src/css/scss/_common.scss
@@ -145,6 +145,19 @@
         bottom:10px;
         left:16px;
     }
+    .layui-table-body{
+        min-height:250px; 
+    }
+    .layui-table-view{
+        margin:0;
+    }
+
+    .com-table-top-handler{
+        border:1px solid #e6e6e6;
+        background:#e9e9e9; 
+        height:40px;
+        line-height:40px; 
+    }
 }
 
 
