--- a/src/css/scss/_common.scss
+++ b/src/css/scss/_common.scss
@@ -155,8 +155,11 @@
     .com-table-top-handler{
         border:1px solid #e6e6e6;
         background:#e9e9e9; 
-        height:40px;
-        line-height:40px; 
+        
+        padding:5px 10px 5px 60px;
+        .layui-btn{
+            font-size:12px;
+        }
     }
 }
 
